unpackaged/main/default/objects/Asset/fields/Neuf__c.field-meta.xml
<CustomField>
    <fullName>Neuf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neuf</label>
    <type>Checkbox</type>
</CustomField>