unpackaged/main/default/objects/Asset/fields/Neuf_ou_parc__c.field-meta.xml
<CustomField>
    <fullName>Neuf_ou_parc__c</fullName>
    <label>Neuf ou parc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neuf</fullName>
            </value>
            <value>
                <fullName>Parc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>