unpackaged/main/default/objects/Asset/fields/Nom_Commercial_Client__c.field-meta.xml
<CustomField>
    <fullName>Nom_Commercial_Client__c</fullName>
    <description>Le nom commercial du compte attaché au parc</description>
    <formula>Account.NomCommercial__c</formula>
    <label>Nom Commercial Client</label>
    <type>Text</type>
</CustomField>