unpackaged/main/default/objects/Asset/fields/Norme_Euro__c.field-meta.xml
<CustomField>
    <fullName>Norme_Euro__c</fullName>
    <label>Norme Euro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5+</fullName>
            </value>
            <value>
                <fullName>EEV</fullName>
            </value>
            <value>
                <fullName>EURO 1</fullName>
            </value>
            <value>
                <fullName>EURO 2</fullName>
            </value>
            <value>
                <fullName>EURO 3</fullName>
            </value>
            <value>
                <fullName>EURO 4</fullName>
            </value>
            <value>
                <fullName>EURO 5</fullName>
            </value>
            <value>
                <fullName>EURO 6</fullName>
            </value>
            <value>
                <fullName>EURO 6-B</fullName>
            </value>
            <value>
                <fullName>EURO 6-C</fullName>
            </value>
            <value>
                <fullName>EURO 6-D</fullName>
            </value>
            <value>
                <fullName>EURO 6-D-FULL</fullName>
            </value>
            <value>
                <fullName>EURO 6-D-TEMP</fullName>
            </value>
            <value>
                <fullName>EURO 6-E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>