unpackaged/main/default/objects/Asset/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>Options installées sur le conteneur.</description>
    <label>Options</label>
    <type>TextArea</type>
</CustomField>