unpackaged/main/default/objects/Asset/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En propre</fullName>
            </value>
            <value>
                <fullName>Groupe Petit Forestier</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>