unpackaged/main/default/objects/Asset/fields/Parc_chez_le_client__c.field-meta.xml
<CustomField>
    <fullName>Parc_chez_le_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFS-826</description>
    <label>Parc chez le client</label>
    <type>Checkbox</type>
</CustomField>