unpackaged/main/default/objects/Asset/fields/Pays_Region__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region__c</fullName>
    <description>Pays / Région de l&#39;agence</description>
    <formula>text( Agence__r.Territoire__c )</formula>
    <label>Pays / Région</label>
    <type>Text</type>
</CustomField>