unpackaged/main/default/objects/Asset/fields/Pneu_essieu_1__c.field-meta.xml
<CustomField>
    <fullName>Pneu_essieu_1__c</fullName>
    <label>Pneu essieu 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>