unpackaged/main/default/objects/Asset/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADO</fullName>
            </value>
            <value>
                <fullName>ADO-AN</fullName>
            </value>
            <value>
                <fullName>AFFECTATION</fullName>
            </value>
            <value>
                <fullName>ALD</fullName>
            </value>
            <value>
                <fullName>ALD-AG</fullName>
            </value>
            <value>
                <fullName>ALD-AN</fullName>
            </value>
            <value>
                <fullName>A RETIRER</fullName>
            </value>
            <value>
                <fullName>ATE -AAG</fullName>
            </value>
            <value>
                <fullName>ATE -AAG-AG</fullName>
            </value>
            <value>
                <fullName>ATE -AAG-ATE</fullName>
            </value>
            <value>
                <fullName>ATE CDM</fullName>
            </value>
            <value>
                <fullName>ATE CDM-AAG</fullName>
            </value>
            <value>
                <fullName>ATE CDM-AAG-AG</fullName>
            </value>
            <value>
                <fullName>ATE CDM-AAG-ATE</fullName>
            </value>
            <value>
                <fullName>ATE EXT</fullName>
            </value>
            <value>
                <fullName>ATE EXT CDM</fullName>
            </value>
            <value>
                <fullName>ATE EXT LD</fullName>
            </value>
            <value>
                <fullName>ATE EXT MU</fullName>
            </value>
            <value>
                <fullName>ATE EXT MULET</fullName>
            </value>
            <value>
                <fullName>ATE EXT NEUT</fullName>
            </value>
            <value>
                <fullName>ATE LD</fullName>
            </value>
            <value>
                <fullName>ATE LD-AAG</fullName>
            </value>
            <value>
                <fullName>ATE LD-AAG-AG</fullName>
            </value>
            <value>
                <fullName>ATE LD-AAG-ATE</fullName>
            </value>
            <value>
                <fullName>ATELIER</fullName>
            </value>
            <value>
                <fullName>ATE MU-AAG</fullName>
            </value>
            <value>
                <fullName>ATE MU-AAG-AG</fullName>
            </value>
            <value>
                <fullName>ATE MU-AAG-ATE</fullName>
            </value>
            <value>
                <fullName>ATE MULET</fullName>
            </value>
            <value>
                <fullName>ATE NEUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>