unpackaged/main/default/objects/Asset/fields/Position_Conteneur__c.field-meta.xml
<CustomField>
    <fullName>Position_Conteneur__c</fullName>
    <description>Position du conteneur</description>
    <label>Position Conteneur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exploitable</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Exploitable</label>
            </value>
            <value>
                <fullName>Non Exploitable</fullName>
                <color>#FF0000</color>
                <label>Non-Exploitable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>