unpackaged/main/default/objects/Asset/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <label>PTC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>