unpackaged/main/default/objects/Asset/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <label>Quantité</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>