unpackaged/main/default/objects/Asset/fields/Region_Parc__c.field-meta.xml
<CustomField>
    <fullName>Region_Parc__c</fullName>
    <formula>Text( Agence_Localisation__r.Region__c )</formula>
    <label>Région Parc</label>
    <type>Text</type>
</CustomField>