unpackaged/main/default/objects/Asset/fields/SBQQ__AdditionalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
    <description>Additional Discount for this Asset, if expressed as an amount</description>
    <inlineHelpText>Remise supplémentaire pour cette ressource, si elle est exprimée avec un montant</inlineHelpText>
    <label>Additional Disc. (Amt)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>