unpackaged/main/default/objects/Asset/fields/SBQQ__BillingType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingType__c</fullName>
    <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
    <inlineHelpText>Type de facturation qui définit à quel moment la facturation doit avoir lieu. La facturation anticipée vous permet de facturer vos clients avant de livrer les produits ou services commandés ; la facturation différée vous permet de facturer vos clients après avoir livré les produits ou services.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>