unpackaged/main/default/objects/Asset/fields/SBQQ__FromServiceCloud__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FromServiceCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Service Cloud was enabled when this Asset was created.</description>
    <inlineHelpText>Détermine si Service Cloud était activé lorsque cette ressource a été créée.</inlineHelpText>
    <label>From Service Cloud</label>
    <type>Checkbox</type>
</CustomField>