unpackaged/main/default/objects/Asset/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Number__c</fullName>
    <description>Number indicating this line&#39;s position within its group or quote.</description>
    <inlineHelpText>Numéro qui indique la position de la ligne dans son groupe ou son devis.</inlineHelpText>
    <label>Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>