unpackaged/main/default/objects/Asset/fields/SBQQ__OptionDiscount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OptionDiscount__c</fullName>
    <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
    <inlineHelpText>Si cette ligne correspond à une unité de gestion de stock facultative, ce champ capture toute remise accordée au package et étendue à l&#39;option.</inlineHelpText>
    <label>Option Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>