unpackaged/main/default/objects/Asset/fields/SBQQ__OriginalUnitCost__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OriginalUnitCost__c</fullName>
    <description>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</description>
    <inlineHelpText>Coût unitaire d&#39;origine de la ressource au moment de l&#39;achat, avant l&#39;application des barèmes de coût unitaire.</inlineHelpText>
    <label>Original Unit Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>