unpackaged/main/default/objects/Asset/fields/SBQQ__PackageProductCode__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PackageProductCode__c</fullName>
    <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
    <inlineHelpText>Un code qui énumère chacun des composants de ce package en fonction de leurs codes composant.</inlineHelpText>
    <label>Package Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>