unpackaged/main/default/objects/Asset/fields/SBQQ__RequiredByProduct__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RequiredByProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Product of this Asset.</description>
    <inlineHelpText>Produit parent de cette ressource.</inlineHelpText>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Assets</relationshipLabel>
    <relationshipName>ChildAssets</relationshipName>
    <type>Lookup</type>
</CustomField>