unpackaged/main/default/objects/Asset/fields/SBQQ__RequiredBySubscription__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RequiredBySubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>L&#39;abonnement parent. S&#39;il est renseigné, cette ressource est un enfant dans une offre groupée.</inlineHelpText>
    <label>Required By Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Assets (Required By Subscription)</relationshipLabel>
    <relationshipName>ChildAssets</relationshipName>
    <type>Lookup</type>
</CustomField>