unpackaged/main/default/objects/Asset/fields/SBQQ__RootId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RootId__c</fullName>
    <description>The ID of the subscription or asset at the root of the bundle that contains this asset</description>
    <externalId>true</externalId>
    <inlineHelpText>L&#39;ID de la souscription ou de la ressource à la racine du paquet qui contient cette ressource</inlineHelpText>
    <label>Root Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>