unpackaged/main/default/objects/Asset/fields/Status_de_location__c.field-meta.xml
<CustomField>
    <fullName>Status_de_location__c</fullName>
    <label>Statut de Réservation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Position_Conteneur__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>En Atelier</fullName>
            </value>
            <value>
                <fullName>En Transport</fullName>
            </value>
            <value>
                <fullName>En Location</fullName>
            </value>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>Cession</fullName>
            </value>
            <value>
                <fullName>Magasin (Service)</fullName>
            </value>
            <value>
                <fullName>En Fabrication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>