unpackaged/main/default/objects/Asset/fields/TECH_Nom_Parc__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nom_Parc__c</fullName>
    <label>TECH Nom Parc</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>