unpackaged/main/default/objects/Asset/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <label>temp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>