unpackaged/main/default/objects/Asset/fields/Temp_rature__c.field-meta.xml
<CustomField>
    <fullName>Temp_rature__c</fullName>
    <label>Température</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mono</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Sans groupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>