unpackaged/main/default/objects/Asset/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Température</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Négative</fullName>
            </value>
            <value>
                <fullName>Mixte</fullName>
            </value>
            <value>
                <fullName>Sec</fullName>
                <label>Isotherme</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>