unpackaged/main/default/objects/Asset/fields/Territoire_Parc__c.field-meta.xml
<CustomField>
    <fullName>Territoire_Parc__c</fullName>
    <formula>Text( Agence_Localisation__r.Territoire__c )</formula>
    <label>Territoire Parc</label>
    <type>Text</type>
</CustomField>