unpackaged/main/default/objects/Asset/fields/Type_BV__c.field-meta.xml
<CustomField>
    <fullName>Type_BV__c</fullName>
    <label>Type BV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mécanique</fullName>
            </value>
            <value>
                <fullName>Automatique</fullName>
            </value>
            <value>
                <fullName>Robotisée</fullName>
            </value>
            <value>
                <fullName>DSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>