unpackaged/main/default/objects/Asset/fields/Type_de_parc__c.field-meta.xml
<CustomField>
    <fullName>Type_de_parc__c</fullName>
    <formula>if(
AND(
NOT(ISBLANK( Age_du_vehicule__c ))
,
Age_du_vehicule__c &gt; 1826
)
,
&quot;Parc&quot;
,
&quot;Neuf&quot;
)</formula>
    <label>Type de parc</label>
    <type>Text</type>
</CustomField>